[package]
name = "renewm_core"
version = "0.0.1"
edition = "2021"
authors = ["Audrick YEU <audrickyeu@proton.me>"]
description = "My personnel project on newm rewritten fully in rust"
license = "GPL-3.0-or-later"
keywords = ["klownie", "renewm", "repywm", "newm", "pywm", ]
readme = "README.md"
repository = "https://github.com/klownie/renewm"
homepage = "https://github.com/klownie/renewm"

[dependencies]
log = "0.4.17"
