[package]
name = "renewm"
version = "0.0.1"
edition = "2021"
authors = ["Audrick YEU <audrickyeu@proton.me>"]
description = "My personnel project on newm rewritten fully in rust"
license = "GPL-3.0-or-later"
keywords = ["klownie", "renewm", "repywm", "newm", "pywm", "smithay", "mwm" ]
readme = "README.md"
repository = "https://github.com/klownie/renewm"
homepage = "https://github.com/klownie/renewm"

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.156", features = ["derive"] }
# log = "0.4.17"
# env_logger = "0.10.0"
# chrono = "0.4.24"
# dirs = "5.0.1"
#


[dependencies.smithay]
version = "0.3"
git = "https://github.com/smithay/smithay.git"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
