[package]
name = "repywm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.30.1"
wayland-server = "0.30.0"
wayland-protocols = "0.30.0"
wayland-egl = "0.30.0"
wayland-cursor = "0.30.0"
wayland-scanner = "0.30.0"
wayland-backend = "0.1.2"
wayland-sys = "0.30.1"
